--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -11,7 +11,7 @@ devices: 1
 move_metrics_to_cpu: True
 
 # mixed precision for extra speed-up
-# precision: 16
+precision: 16
 
 # set True to to ensure deterministic results
 # makes training slower but gives more reproducibility than just setting seeds
