--- a/configs/datamodule/ttda.yaml
+++ b/configs/datamodule/ttda.yaml
@@ -2,8 +2,10 @@ defaults:
   # - test_list: cityscapes # idd # crosscity # cityscapes # mapillary # cityscapes, bdd, mapillary
   - test_list: cityscapes
 _target_: src.datamodules.ttda_datamodule.Sim2RealSegmentationDataModule
-data_dir: ${paths.data_dir}
-batch_size: 1 # 64
+# data_dir: ${paths.data_dir}
+data_dir: /kaggle/input/cityscape-diga
+#batch_size: 1 # 64
+batch_size: 8
 num_workers: ${oc.decode:${oc.env:NUM_WORKERS}}
 pin_memory: False
 train_list: # ! not used
