--- a/configs/experiment/ttda.yaml
+++ b/configs/experiment/ttda.yaml
@@ -41,7 +41,7 @@ train: False
 
 # evaluate on test set, using best model weights achieved during training
 # lightning chooses best weights based on the metric specified in checkpoint callback
-test: False
+test: True
 
 # logger:
 #   wandb:
