--- a/configs/model/diga.yaml
+++ b/configs/model/diga.yaml
@@ -4,8 +4,9 @@ _target_: src.models.ttda_module.DIGA
 cfg:
   bn_lambda: 0.8
   proto_lambda: 0.8
-  fusion_lambda: 0.8
+  fusion_lambda: 0.8 # best
   confidence_threshold: 0.9
-  proto_rho: 0.1
+  number_of_prototypes: 0.7 # best
+  proto_rho: 0.4 # best
   lambda_dot: 0.9
-  k-top: 10
+  memory_bank_size: 32
