--- a/configs/model/diga.yaml
+++ b/configs/model/diga.yaml
@@ -10,3 +10,12 @@ cfg:
   proto_rho: 0.4 # best
   lambda_dot: 0.9
   memory_bank_size: 32
+optimizer:
+  lr: 0.001
+  momentum: 0.9
+  weight_decay: 0.0005
+#   momentum: 0.9 # TODO only bn layer
+# tt_lr_scheduler:
+#   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+#   T_max: 1000
+#   eta_min: 1e-6
