--- a/configs/experiment/ttda.yaml
+++ b/configs/experiment/ttda.yaml
@@ -37,7 +37,7 @@ trainer:
 # datamodule:
 #   batch_size: 64
 # set False to skip model training
-train: True
+train: False
 
 # evaluate on test set, using best model weights achieved during training
 # lightning chooses best weights based on the metric specified in checkpoint callback
