--- a/configs/experiment/ttda.yaml
+++ b/configs/experiment/ttda.yaml
@@ -7,7 +7,7 @@ defaults:
   - override /datamodule: ttda.yaml
   - override /model: diga.yaml
   - override /callbacks: mt.yaml # TODO
-  - override /trainer: gpu.yaml
+  - override /trainer: ddp.yaml
   - override /logger: wandb.yaml
   # - override /logger: null
   - _self_
